# centy-daemon

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  cspell.json
.centy/: .centy-manifest.json
.centy/issues/0001/: issue.md  metadata.json
.centy/issues/0002/: issue.md  metadata.json
.centy/issues/0003/: metadata.json
.centy/issues/0004/: issue.md  metadata.json
.centy/issues/15ba2c7c-1e7d-4137-926e-d215a5f7d79b/: issue.md  metadata.json
.centy/issues/275bdd56-96e3-4f83-8c99-fed17f122740/: issue.md  metadata.json
.centy/issues/4ffcb749-0b7b-4e04-ab37-4047feff5df7/: metadata.json
.centy/issues/7dee3057-acb1-4220-9b6e-7ed9ab0fa293/: issue.md  metadata.json
.centy/issues/d98263ee-a7a2-40c5-a833-c74fba6ac7c4/: issue.md  metadata.json
.centy/issues/e92f62c8-13ad-425b-a669-27a944ae0dd9/: issue.md  metadata.json
.centy/issues/f499a756-7c1e-45fb-9567-ad71b7a10919/: issue.md  metadata.json
.github/workflows/: build.yml  release.yml  spellcheck.yml
centy-daemon/.centy/: .centy-manifest.json  README.md
e2e/: assets.e2e.spec.ts  config.e2e.spec.ts  daemon.e2e.spec.ts  docs.e2e.spec.ts  init.e2e.spec.ts  issues.e2e.spec.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
e2e/fixtures/: daemon-manager.ts  grpc-client.ts
packaging/windows/wix/: main.wxs
proto/: centy.proto
src/: lib.rs  main.rs
src/config/: mod.rs
src/docs/: crud.rs  mod.rs
src/issue/: create.rs  crud.rs  id.rs  metadata.rs  mod.rs  priority.rs  reconcile.rs  status.rs
src/manifest/: mod.rs  types.rs
src/migration/: executor.rs  mod.rs  registry.rs  types.rs
src/migration/migrations/: mod.rs  v0_1_0.rs
src/reconciliation/: execute.rs  managed_files.rs  mod.rs  plan.rs
src/registry/: mod.rs  storage.rs  tracking.rs  types.rs
src/server/: mod.rs
src/template/: engine.rs  mod.rs  types.rs
src/utils/: hash.rs  mod.rs
src/version/: mod.rs  types.rs
tests/: doc_test.rs  issue_test.rs  registry_test.rs  template_test.rs
