[package]
name = "centy-daemon"
version = "0.1.0"
edition = "2021"
description = "Daemon service for Centy - a local-first issue and documentation tracker"
authors = ["Centy Team"]
license = "MIT"

[dependencies]
# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"

# HTTP/CORS
tower-http = { version = "0.5", features = ["cors"] }
http = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography (for SHA-256)
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Template engine
handlebars = "6"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits and lazy statics
async-trait = "0.1"
once_cell = "1"

# Regex for validation
regex = "1"

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "centy-daemon"
path = "src/main.rs"
