[package]
name = "centy-daemon"
version = "0.1.1"
edition = "2021"
description = "Daemon service for Centy - a local-first issue and documentation tracker"
authors = ["Centy Team"]
license = "MIT"

[dependencies]
# gRPC
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"

# HTTP/CORS
tower-http = { version = "0.5", features = ["cors"] }
http = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptography (for SHA-256)
sha2 = "0.10"
hex = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Template engine
handlebars = "6"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits and lazy statics
async-trait = "0.1"
once_cell = "1"

# Regex for validation
regex = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "centy-daemon"
path = "src/main.rs"

# Debian package metadata (used by cargo-deb)
[package.metadata.deb]
maintainer = "Centy Team"
copyright = "2024 Centy Team"
license-file = ["LICENSE", "0"]
extended-description = """
Centy Daemon is a local-first issue and documentation tracker service.
It provides a gRPC API for managing issues and documentation within your projects.
"""
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/centy-daemon", "usr/bin/", "755"],
    ["packaging/linux/systemd/centy-daemon.service", "lib/systemd/system/", "644"],
    ["README.md", "usr/share/doc/centy-daemon/", "644"],
]

# RPM package metadata (used by cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/centy-daemon", dest = "/usr/bin/centy-daemon", mode = "755" },
    { source = "packaging/linux/systemd/centy-daemon.service", dest = "/lib/systemd/system/centy-daemon.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/centy-daemon/README.md", mode = "644", doc = true },
]
